--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
    <title>John's Hamburgers</title> 
-
+     <link rel="shortcut icon" href="../../favicon.ico"> 
+      <link rel="stylesheet" href="style.css"> 
+       <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
+       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css"> 
+  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
+
  
 </head>
 <body>
@@ -326,6 +332,103 @@
 
 
 
+section class="precio" id="Precios">
+   <div class="f">
+       <div class="f">
+           <div class="row">
+               <div class="col-sm-4">
+                   <div class="carda text-center">
+                       <div class="teo">
+                           <i class="fas fa-bread-slice"></i>
+                           <h2>Basic</h2>
+                       </div>
+                       <div class="pleo">
+                           <h4>
+                               <sup>&#x20B9;</sup>2500
+                           </h4>
+                       </div> 
+                       <div class="option">
+                        <ul>
+                            <li>
+                                <i class="fas fa-check"></i> 1 mesa
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i> 20% de descuento
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i> 1 cupo
+                            </li>
+                            <li>
+                                <i class="fas fa-times"></i> sin atención personalizada
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="vtn">Order Now</a>
+                </div>
+            </div> <div class="col-sm-4">
+               <div class="carda text-center">
+                   <div class="teo">
+                       <i class="fas fa-utensils"></i>
+                       <h2>Standard</h2>
+                   </div>
+                   <div class="pleo">
+                       <h4>
+                           <sup>&#x20B9;</sup>5000
+                       </h4>
+                   </div>
+                   <div class="option">
+                       <ul>
+                           <li>
+                               <i class="fas fa-check"></i> 2 mesas
+                           </li>
+                           <li>
+                               <i class="fas fa-check"></i> 40% de descuento 
+                           </li>
+                           <li>
+                               <i class="fas fa-check"></i> 2 cupos
+                           </li>
+                           <li>
+                               <i class="fas fa-times"></i> atención semi-personalizada
+                           </li>
+                       </ul>
+                     </div>
+                     <a href="#" class="vtn">Order Now</a>
+                 </div>
+             </div>
+             <div class="col-sm-4">
+                 <div class="carda text-center">
+                     <div class="teo">
+                         <i class="fas fa-hamburger"></i>
+                         <h2>Premium</h2>
+                     </div>
+                     <div class="pleo">
+                         <h4>
+                             <sup>&#x20B9;</sup>10000
+                         </h4>
+                     </div>
+                     <div class="option">
+                         <ul>
+                             <li>
+                                 <i class="fas fa-check"></i> 4 mesas
+                             </li>
+                             <li>
+                                 <i class="fas fa-check"></i> 50% de descuento
+                             </li>
+                             <li>
+                                 <i class="fas fa-check"></i> 5 cupos 
+                             </li>
+                             <li>
+                                 <i class="fas fa-check"></i> atención personalizada
+                             </li>
+                         </ul>
+                     </div>
+                     <a href="#" class="vtn">Order Now</a>
+                 </div>
+             </div>
+         </div>
+     </div>
+ </div>
+ </section>
 
 
 
