--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
    <nav class="navbar">
    <a href="#">Inicio</a>
    <a href="#Menú">Menú</a>
-   <a href="#Reseñas">Reseñas</a>
+   <a href="#Reseñas">Reseñas</a> 
+   <a href="#Precios">Precios</a>    
    <a href="#Contacto">Contacto</a> 
    
    
