--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
 
 
-section class="precio" id="Precios">
+<section class="precio" id="Precios">
    <div class="f">
        <div class="f">
            <div class="row">
