--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
    <div class="contenido">
        <h2>Para los indecisos, llega: "ESTO O ESO"</h2>
        <p>
-            Queso Ketchup Carne molida 
+            Queso Carne molida 
        </p>
        <a href="https://www.wendys.com.do/menu">Leer más</a>
    </div>    
