--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <div class="head"> 
 
    <div class="logo">
-            <a href="https://www.burgerking.es/es/"><img src="pictures/Burger_King_(1955-1968).png" alt="logo empresarial" width="40"></a>
+      <a href="#"><img src="pictures/h.jpeg" alt="logo empresarial" width="40"></a> 
    </div>
    
    <nav class="navbar">
